--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "browser-sync": "^2.9.11",
+    "browser-sync": "^2.18.12",
     "chai": "^3.4.0",
     "css-loader": "^0.28.4",
     "del": "^3.0.0",
@@ -22,6 +22,7 @@
     "fbjs": "^0.4.0",
     "file-loader": "^0.11.2",
     "font-awesome": "^4.7.0",
+    "ga-react-router": "^2.1.1",
     "git-repository": "^0.1.1",
     "glob": "^5.0.15",
     "highlight.js": "^9.12.0",
