--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "semantic"]
 	path = semantic
-	url = git@github.com:inkdropapp/inkdrop-semantic-ui.git
+	url = https://github.com/inkdropapp/inkdrop-semantic-ui.git
