--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lint": "eslint src tools test",
     "test": "npm run lint && mocha --compilers js:babel/register",
     "clean": "babel-node --eval \"require('./tools/clean')().catch(err => console.log(err.stack))\"",
+    "build:semantic": "cd semantic && npm install && npm run build",
     "build": "babel-node --eval \"require('./tools/build')().catch(err => console.log(err.stack))\"",
     "start": "babel-node --eval \"require('./tools/start')().catch(err => console.log(err.stack))\"",
     "deploy": "babel-node --eval \"require('./tools/deploy')().catch(err => console.log(err.stack))\""
