--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mkdirp": "^0.5.1",
     "mocha": "^2.3.3",
     "ncp": "^2.0.0",
+    "null-loader": "^0.1.1",
     "postcss": "^6.0.1",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
