--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
+  "name": "inkdrop-top",
   "devDependencies": {
     "autoprefixer": "^7.1.1",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-latest": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.18.12",
     "chai": "^3.4.0",
     "css-loader": "^0.28.4",
     "del": "^3.0.0",
-    "eslint": "^4.0.0",
-    "eslint-plugin-react": "^7.0.1",
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.8.2",
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^2.1.2",
     "fbjs": "^0.4.0",
@@ -40,6 +42,7 @@
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
     "precss": "^1.3.0",
+    "prettier": "^1.13.4",
     "prop-types": "^15.5.10",
     "raw-loader": "^0.5.1",
     "react": "^15.5.4",
@@ -49,7 +52,6 @@
     "redbox-react": "^1.4.1",
     "script-loader": "^0.7.0",
     "semantic-ui": "^2.2.10",
-    "standard": "^10.0.2",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.8",
     "webpack": "^2.6.1",
@@ -66,8 +68,7 @@
     "deploy": "babel-node --eval \"require('./tools/deploy')().catch(err => console.log(err.stack))\""
   },
   "engines": {
-    "node": "^7.10.1",
-    "npm": "^4.6.1",
-    "yarn": "^0.24.5"
+    "node": "^9.4.0",
+    "npm": "^5.6.0"
   }
 }
