--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-source-filesystem": "^2.0.33",
+    "gatsby-source-medium": "^2.0.7",
     "gatsby-transformer-sharp": "^2.1.18",
     "ionicons": "^4.5.8",
     "less": "^3.9.0",
@@ -21,6 +22,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-lazyload": "^2.5.0",
     "semantic-ui-less": "^2.4.1",
     "semantic-ui-react": "^0.86.0"
   },
