--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-source-filesystem": "^2.0.33",
     "gatsby-source-medium": "^2.0.7",
     "gatsby-transformer-sharp": "^2.1.18",
+    "gatsby-transformer-yaml": "^2.1.12",
     "ionicons": "^4.5.8",
     "less": "^3.9.0",
     "prop-types": "^15.7.2",
@@ -24,7 +25,8 @@
     "react-helmet": "^5.2.1",
     "react-lazyload": "^2.5.0",
     "semantic-ui-less": "^2.4.1",
-    "semantic-ui-react": "^0.86.0"
+    "semantic-ui-react": "^0.86.0",
+    "shuffle-array": "^1.0.1"
   },
   "devDependencies": {
     "eslint-config-prettier": "^4.2.0",
