feat(*): Add alternativeTo and about myself

--- a/src/data/testimonials.yaml
+++ b/src/data/testimonials.yaml
@@ -68,3 +68,8 @@
   name: Artem B.
   comment: |
     Simple, powerful, and works seamlessly across all my platforms and devices.
+-
+  id: ben2
+  name: Ben Samuel
+  comment: |
+    I tried a number of apps; taking notes is so specific to the writer. Inkdrop started off with a smart design, but Takuya is also dialed in to his users' needs so I've got confidence going forward.
