--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "flickity": "^2.2.0",
     "gatsby": "^2.4.4",
     "gatsby-image": "^2.0.41",
+    "gatsby-plugin-google-analytics": "^2.0.20",
     "gatsby-plugin-less": "^2.0.12",
     "gatsby-plugin-manifest": "^2.1.0",
     "gatsby-plugin-offline": "^2.1.0",
