feat(testimonials): Add two reviews

--- a/src/data/testimonials.yaml
+++ b/src/data/testimonials.yaml
@@ -73,3 +73,13 @@
   name: Ben Samuel
   comment: |
     I tried a number of apps; taking notes is so specific to the writer. Inkdrop started off with a smart design, but Takuya is also dialed in to his users' needs so I've got confidence going forward.
+-
+  id: james
+  name: James Lilliott
+  comment: |
+    Fast, intuitive, & customisable, combined with frequent updates & a developer that listens. Theses are the reasons Inkdrop is one of my most used applications for personal & professional use.
+-
+  id: pavel
+  name: Pavel Tishkov
+  comment: |
+    The application is simple and functional. I use it every day to structure my knowledge.
