--- a/package.json
+++ b/package.json
@@ -6,32 +6,37 @@
   "author": "Takuya Matsuyama <t@inkdrop.app>",
   "dependencies": {
     "flickity": "^2.2.0",
-    "gatsby": "^2.7.3",
-    "gatsby-image": "^2.1.1",
-    "gatsby-plugin-google-analytics": "^2.0.20",
-    "gatsby-plugin-less": "^2.0.12",
-    "gatsby-plugin-manifest": "^2.1.0",
-    "gatsby-plugin-offline": "^2.1.0",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.1.1",
-    "gatsby-source-filesystem": "^2.0.33",
-    "gatsby-source-medium": "^2.0.7",
-    "gatsby-transformer-sharp": "^2.1.18",
-    "gatsby-transformer-yaml": "^2.1.12",
+    "gatsby": "^2.15.29",
+    "gatsby-image": "^2.2.24",
+    "gatsby-plugin-catch-links": "^2.1.12",
+    "gatsby-plugin-google-analytics": "^2.1.20",
+    "gatsby-plugin-less": "^3.0.9",
+    "gatsby-plugin-manifest": "^2.2.20",
+    "gatsby-plugin-offline": "^3.0.11",
+    "gatsby-plugin-react-helmet": "^3.1.10",
+    "gatsby-plugin-sharp": "^2.2.28",
+    "gatsby-remark-autolink-headers": "^2.1.13",
+    "gatsby-remark-images": "^3.1.25",
+    "gatsby-remark-prismjs": "^3.3.17",
+    "gatsby-source-filesystem": "^2.1.29",
+    "gatsby-source-medium": "^2.1.9",
+    "gatsby-transformer-remark": "^2.6.27",
+    "gatsby-transformer-sharp": "^2.2.20",
+    "gatsby-transformer-yaml": "^2.2.12",
     "ionicons": "^4.5.8",
-    "less": "^3.9.0",
+    "less": "^3.10.3",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
     "react-lazyload": "^2.6.1",
     "semantic-ui-less": "^2.4.1",
-    "semantic-ui-react": "^0.86.0",
+    "semantic-ui-react": "^0.88.1",
     "shuffle-array": "^1.0.1"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^4.2.0",
-    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "prettier": "^1.17.0"
   },
   "keywords": [
