--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Takuya Matsuyama <t@inkdrop.app>",
   "dependencies": {
+    "@svgr/webpack": "^5.4.0",
     "axios": "^0.19.2",
     "flickity": "^2.2.1",
     "gatsby": "^2.24.15",
@@ -17,6 +18,7 @@
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.24",
+    "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-remark-autolink-headers": "^2.3.11",
     "gatsby-remark-images": "^3.3.23",
     "gatsby-remark-prismjs": "^3.5.10",
