--- a/package.json
+++ b/package.json
@@ -8,25 +8,25 @@
     "@svgr/webpack": "^5.4.0",
     "axios": "^0.21.1",
     "flickity": "^2.2.1",
-    "gatsby": "^2.24.15",
-    "gatsby-image": "^2.4.14",
-    "gatsby-plugin-catch-links": "^2.3.11",
-    "gatsby-plugin-google-analytics": "^2.3.13",
-    "gatsby-plugin-less": "^4.0.3",
-    "gatsby-plugin-manifest": "^2.4.21",
-    "gatsby-plugin-offline": "^3.2.21",
-    "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.24",
-    "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-remark-autolink-headers": "^2.3.11",
-    "gatsby-remark-images": "^3.3.23",
-    "gatsby-remark-prismjs": "^3.5.10",
-    "gatsby-source-filesystem": "^2.3.23",
-    "gatsby-source-medium": "^2.3.10",
-    "gatsby-transformer-remark": "^2.8.27",
-    "gatsby-transformer-sharp": "^2.5.12",
-    "gatsby-transformer-yaml": "^2.4.10",
+    "gatsby": "^3.10.2",
+    "gatsby-image": "^3.10.0",
+    "gatsby-plugin-catch-links": "^3.10.0",
+    "gatsby-plugin-google-analytics": "^3.10.0",
+    "gatsby-plugin-less": "^5.10.0",
+    "gatsby-plugin-manifest": "^3.10.0",
+    "gatsby-plugin-offline": "^4.10.0",
+    "gatsby-plugin-purgecss": "^6.0.2",
+    "gatsby-plugin-react-helmet": "^4.10.0",
+    "gatsby-plugin-sharp": "^3.10.2",
+    "gatsby-plugin-svgr": "^3.0.0-beta.0",
+    "gatsby-remark-autolink-headers": "^4.7.0",
+    "gatsby-remark-images": "^5.7.0",
+    "gatsby-remark-prismjs": "^5.7.0",
+    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-source-medium": "^3.10.0",
+    "gatsby-transformer-remark": "^4.7.0",
+    "gatsby-transformer-sharp": "^3.10.0",
+    "gatsby-transformer-yaml": "^3.10.0",
     "ionicons": "^5.1.2",
     "js-cookie": "^2.2.1",
     "less": "^3.12.2",
@@ -40,9 +40,9 @@
     "shuffle-array": "^1.0.1"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.0.5"
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.2"
   },
   "keywords": [
     "gatsby",
