--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^3.10.2",
     "gatsby-image": "^3.10.0",
     "gatsby-plugin-catch-links": "^3.10.0",
+    "gatsby-plugin-csp": "^1.1.3",
     "gatsby-plugin-google-analytics": "^3.10.0",
     "gatsby-plugin-less": "^5.10.0",
     "gatsby-plugin-manifest": "^3.10.0",
