--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-catch-links": "^4.5.0",
     "gatsby-plugin-csp": "^1.1.3",
-    "gatsby-plugin-google-analytics": "^4.5.0",
+    "gatsby-plugin-fathom": "^2.1.1",
     "gatsby-plugin-less": "^6.5.0",
     "gatsby-plugin-manifest": "^4.5.1",
     "gatsby-plugin-offline": "^5.5.1",
