--- a/package.json
+++ b/package.json
@@ -5,42 +5,42 @@
   "version": "5.0.0",
   "author": "Takuya Matsuyama <t@inkdrop.app>",
   "dependencies": {
-    "@svgr/webpack": "^6.2.0",
-    "axios": "^0.21.1",
-    "gatsby": "^4.18.0",
+    "@svgr/webpack": "^8.0.1",
+    "axios": "^1.4.0",
+    "gatsby": "^5.10.0",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-catch-links": "^4.18.0",
-    "gatsby-plugin-csp": "^1.1.3",
+    "gatsby-plugin-catch-links": "^5.10.0",
+    "gatsby-plugin-csp": "^1.1.4",
     "gatsby-plugin-fathom": "^2.1.1",
-    "gatsby-plugin-less": "^6.18.0",
-    "gatsby-plugin-manifest": "^4.18.0",
-    "gatsby-plugin-offline": "^5.18.0",
-    "gatsby-plugin-purgecss": "^6.1.2",
-    "gatsby-plugin-react-helmet": "^5.18.0",
-    "gatsby-plugin-sharp": "^4.18.0",
+    "gatsby-plugin-image": "^3.10.0",
+    "gatsby-plugin-less": "^7.10.0",
+    "gatsby-plugin-manifest": "^5.10.0",
+    "gatsby-plugin-offline": "^6.10.0",
+    "gatsby-plugin-purgecss": "^6.2.1",
+    "gatsby-plugin-react-helmet": "^6.10.0",
+    "gatsby-plugin-sharp": "^5.10.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
-    "gatsby-remark-autolink-headers": "^5.18.0",
-    "gatsby-remark-images": "^6.18.0",
-    "gatsby-remark-prismjs": "^6.18.0",
-    "gatsby-source-filesystem": "^4.18.0",
-    "gatsby-source-medium": "^4.18.0",
-    "gatsby-transformer-remark": "^5.18.0",
-    "gatsby-transformer-sharp": "^4.18.0",
-    "gatsby-transformer-yaml": "^4.18.0",
-    "ionicons": "^5.5.2",
-    "js-cookie": "^3.0.1",
-    "less": "^4.1.2",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "gatsby-remark-autolink-headers": "^6.10.0",
+    "gatsby-remark-prismjs": "^7.10.0",
+    "gatsby-source-filesystem": "^5.10.0",
+    "gatsby-source-medium": "^5.10.0",
+    "gatsby-transformer-remark": "^6.10.0",
+    "gatsby-transformer-sharp": "^5.10.0",
+    "gatsby-transformer-yaml": "^5.10.0",
+    "ionicons": "^7.1.1",
+    "js-cookie": "^3.0.5",
+    "less": "^4.1.3",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "semantic-ui-less": "^2.4.1",
-    "semantic-ui-react": "^2.0.4",
+    "semantic-ui-less": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "shuffle-array": "^1.0.1"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.5.1"
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.8"
   },
   "keywords": [
     "gatsby",
