feat(testimonials): add Guilherme

--- a/src/data/testimonials.yaml
+++ b/src/data/testimonials.yaml
@@ -84,3 +84,9 @@
   linkedin: in/julián-david-reales-de-la-ossa-57884b272/
   comment: |
     It has helped me improve my note-taking process, it's interesting what can be improved with an application like this. Being made by a developer for developers makes it adapt to the needs. Thank you.
+- postId: cardosogui
+  name: Guilherme Cardoso de Almeida
+  github: cardosoGui
+  homepage: https://cardosogui.github.io/
+  comment: |
+    This app has helped me a lot in my jobs party time! it's simple and complete for me ;)
