feat(testimonials): add Yu Okudera's review

--- a/src/data/testimonials.yaml
+++ b/src/data/testimonials.yaml
@@ -90,3 +90,7 @@
   homepage: https://cardosogui.github.io/
   comment: |
     This app has helped me a lot in my jobs party time! it's simple and complete for me ;)
+- postId: okudera
+  name: Yu Okudera
+  comment: |
+    Customizable Great UI, Powerful, and Seamless working on multiple devices. Inkdrop is the kind of "buddy" for me.
