feat(testimonials): add Reedam

--- a/src/data/testimonials.yaml
+++ b/src/data/testimonials.yaml
@@ -94,3 +94,11 @@
   name: Yu Okudera
   comment: |
     Customizable Great UI, Powerful, and Seamless working on multiple devices. Inkdrop is the kind of "buddy" for me.
+- postId: reedam
+  name: Reedam Ranjan
+  comment: |
+    First of all Takuya love from India & thank you so much for inspiring so many developers like me who love the kind of content you create and secondly I used Inkdrop as my daily driver for tech notes, its works flawlessly, there are some instances when something breaks but thanks to Inkdrop support for solving all the queries, Overall its a great productivity tool for any developer who wants to keep track of stuff happening , documenting a project and also Inkdrop provide seamless access across all devices which is a great feature as one can take notes whenever and wherever he is! Thanks for this hope to meet you someday ❤️
+  homepage: https://reedam-ranjan.vercel.app/
+  github: Reedam-Ranjan
+  twitter: ranjan_reedam
+  linkedin: in/reedam-ranjan/
