feat(testimonials): add Dave

--- a/src/data/testimonials.yaml
+++ b/src/data/testimonials.yaml
@@ -102,3 +102,9 @@
   github: Reedam-Ranjan
   twitter: ranjan_reedam
   linkedin: in/reedam-ranjan/
+- postId: dave
+  name: Dave Naugler
+  comment: |
+    I have really come to enjoy Inkdrop. I really enjoy the UI and have quickly learned markdown. It's tough to not write markdown in other note apps (Apple Notes). I really appreciate your time and dedication to this app. It's one I have come to really enjoy and use on a daily basis for organizing my thoughts, my projects, and building out software applications. Cheers to you!
+  github: davenaugler
+  linkedin: in/davenaugler/
