feat(testimonials): add Juan

--- a/src/data/testimonials.yaml
+++ b/src/data/testimonials.yaml
@@ -108,3 +108,12 @@
     I have really come to enjoy Inkdrop. I really enjoy the UI and have quickly learned markdown. It's tough to not write markdown in other note apps (Apple Notes). I really appreciate your time and dedication to this app. It's one I have come to really enjoy and use on a daily basis for organizing my thoughts, my projects, and building out software applications. Cheers to you!
   github: davenaugler
   linkedin: in/davenaugler/
+- postId: juan
+  name: Juan Daniel Martinez
+  comment: |
+    It is hard to explain the feeling of taking notes in markdown on a daily basis, there's something about inkdrop that gives me the need to write something every day.
+    It has become my new study tool in my software development process, watching Takuya's videos when he is taking notes while studying motivates me a lot, it is simple and beautiful, has many cool plugins to complement your experience using the app and I love that it synchronizes your notes instantly with the mobile app so you can't miss any chance of write something anytime!
+  homepage: https://juanda.dev/
+  github: juandadev
+  twitter: juandadotdev
+  linkedin: in/juandadev/
