feat(testimonials): add Rein

--- a/src/data/testimonials.yaml
+++ b/src/data/testimonials.yaml
@@ -124,3 +124,13 @@
   comment: |
     I follow your channel and your doings for a while now and was always inspired by your videos being outside while coding, also the way of how you presented it. It combines the world of tech and the beauty of nature in very pleasing way. I looked into your app, did some warm up with Markdown and was already getting used to it. Thanks for making such a great product, I will continue doing my notes and using the app.
   title: UX Engineer
+- postId: rein
+  name: Rein
+  title: Web Developer
+  comment: |
+    The app is clearly made with love, and it has helped me through the development of many websites. The extensibility is where the app really glows, with the ability to customize it to fit my needs perfectly through its Package Manager and Docs.
+    As a fellow solo developer, thank you Takuya for your contribution to the development community, and I wish you good luck with the development of Inkdrop! 😁
+  homepage: https://rein.run
+  github: heyimrein
+  twitter: heyimrein
+  linkedin: in/heyimrein/
