feat(testimonials): add Daniel

--- a/src/data/testimonials.yaml
+++ b/src/data/testimonials.yaml
@@ -155,3 +155,11 @@
     Simple, efficient, unique and pleasurable to use.
   github: gustavoadono
   twitter: adonogus
+- postId: daniel
+  name: Daniel
+  title: Software Developer
+  company: The Widlarz Group
+  twitter: daniel_mark01
+  github: danielmark0116
+  comment: |
+    Absolutely superb app! Migrated from Notion, not looking back! Also, VIM mode is 🔥
