feat(testimonial): add Jose

--- a/src/data/testimonials.yaml
+++ b/src/data/testimonials.yaml
@@ -163,3 +163,12 @@
   github: danielmark0116
   comment: |
     Absolutely superb app! Migrated from Notion, not looking back! Also, VIM mode is 🔥
+- postId: joseaponte
+  name: José
+  title: CTO
+  company: Excuela
+  homepage: https://joseaponte.dev/
+  github: Jeoxs
+  linkedin: in/josegaponte/
+  comment: |
+    Very easy to use and I love cross-platform.
