--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "shuffle-array": "^1.0.1"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.8"
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.2",
+    "prettier": "^3.4.1"
   },
   "keywords": [
     "gatsby",
