--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
   "dependencies": {
     "@svgr/webpack": "^8.0.1",
     "axios": "^1.4.0",
-    "embla-carousel-autoplay": "^8.0.0-rc05",
-    "embla-carousel-class-names": "^8.0.0-rc05",
-    "embla-carousel-react": "^8.0.0-rc05",
-    "gatsby": "^5.13.1",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-class-names": "^8.5.1",
+    "embla-carousel-fade": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
+    "gatsby": "^5.14.0",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-catch-links": "^5.13.0",
+    "gatsby-plugin-catch-links": "^5.14.0",
     "gatsby-plugin-csp": "^1.1.4",
     "gatsby-plugin-fathom": "^2.1.1",
-    "gatsby-plugin-image": "^3.10.0",
-    "gatsby-plugin-less": "^7.10.0",
-    "gatsby-plugin-manifest": "^5.10.0",
-    "gatsby-plugin-offline": "^6.10.0",
+    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-less": "^7.14.0",
+    "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-offline": "^6.14.0",
     "gatsby-plugin-purgecss": "^6.2.1",
     "gatsby-plugin-react-helmet": "^6.10.0",
     "gatsby-plugin-sharp": "^5.10.0",
@@ -33,13 +34,16 @@
     "ionicons": "^7.1.1",
     "js-cookie": "^3.0.5",
     "less": "^4.1.3",
+    "motion": "^11.12.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "semantic-ui-less": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
-    "shuffle-array": "^1.0.1"
+    "shuffle-array": "^1.0.1",
+    "three": "^0.170.0",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "eslint": "^9.15.0",
