fix(env): added GATSBY_ prefix to the variables

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-INKDROP_API_URL=http://inkdrop.test:3002
-FATHOM_SITE_ID=YXDIPYEA
+GATSBY_INKDROP_API_URL=http://inkdrop.test:3002
+GATSBY_FATHOM_SITE_ID=YXDIPYEA
